# ML-Quantum-Methods

./: .gitignore  README.md  environment.yml  pyproject.toml
Notebooks/: RBM_test.ipynb  my_rbm manual.ipynb  my_rbm.ipynb  netket_rbm bkp_toy.ipynb  netket_rbm detailed.ipynb  netket_rbm gendata.ipynb  netket_rbm.ipynb  netket_rbm_sgd.ipynb  observable estimator.ipynb
Scripts/: 4qubit_measurements.txt  beh2_datagen.py  bkp_toy1.py  measurement_data.py
src/nqs/: BeH2_ptutorial.py  precissimo.py
src/nqs/utils/: measurement_data.py
