[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nqs"
version = "0.1.0"
description = "ML methods for quantum chemistry and many-body physics"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "torch",  # or jax, tensorflow
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "black",
    "isort",
]
